<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.soonzik.soonzik.SignInActivity">

    <TextView android:text="Enter your information" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:text="@string/email_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:paddingLeft="15px"
        android:id="@+id/emailSigninInput" android:inputType="textEmailAddress"/>

    <TextView android:text="@string/firstname_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:paddingLeft="15px"
        android:id="@+id/firstnameSigninInput"/>

    <TextView android:text="@string/lastname_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:paddingLeft="15px"
        android:id="@+id/lastnameSigninInput"/>


    <TextView android:text="@string/username_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:paddingLeft="15px"
        android:id="@+id/usernameSigninInput"/>

    <TextView android:text="@string/birthday_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:paddingLeft="15px"
        android:id="@+id/birthdaySigninInput" android:inputType="date" android:hint="YYYY-MM-DD"/>

    <TextView android:text="@string/password_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/passwordSigninInput" android:inputType="textPassword"/>

    <TextView android:text="@string/language_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/languageSigninInput"/>

    <Button android:text="@string/signin_label" android:id="@+id/signinButtonRegister"/>

</TableLayout>
