<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <ImageView
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:id="@+id/userpicture"
        android:src="@drawable/ic_profile"
        android:contentDescription="@string/imgmenudescription"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp" />

    <ImageView
        android:layout_width="16sp"
        android:layout_height="16sp"
        android:id="@+id/concert_like"
        android:src="@drawable/unlike"
        android:contentDescription="@string/imgmenudescription"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/userpicture"
        android:layout_alignLeft="@+id/userpicture"
        android:layout_alignStart="@+id/userpicture" />

    <TextView
        android:id="@+id/nb_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nb_likes"
        android:layout_alignBottom="@+id/concert_like"
        android:layout_alignRight="@+id/userpicture"
        android:layout_alignEnd="@+id/userpicture" />


    <TextView
        android:id="@+id/artistconcert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist_label"
        android:textStyle="bold"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_alignTop="@+id/userpicture"
        android:layout_toRightOf="@+id/userpicture"
        android:layout_toEndOf="@+id/userpicture"/>

    <TextView
        android:id="@+id/dateconcert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_format"
        android:layout_marginRight="37dp"
        android:layout_marginEnd="37dp"
        android:layout_alignTop="@+id/artistconcert"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/linkconcert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook_soonzik_link"
        android:layout_below="@+id/artistconcert"
        android:layout_alignLeft="@+id/artistconcert"
        android:layout_alignStart="@+id/artistconcert"
        android:autoLink="web"/>

    <TextView
        android:id="@+id/adressconcert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adress"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linkconcert"
        android:layout_alignStart="@+id/artistconcert"
        android:layout_alignLeft="@+id/artistconcert" />

</RelativeLayout>