<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/feedback_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_label"/>

        <Spinner
            android:id="@+id/feedback_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/feedbacksubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedback_subject"
            android:layout_below="@+id/feedback_spinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="textEmailSubject" />

        <EditText
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedback_content"
            android:lines="15"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:layout_marginTop="17dp"
            android:layout_below="@+id/feedbacksubject"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/feedbacksend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/feedback"/>
    </RelativeLayout>

</ScrollView>