<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <ImageView
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:id="@+id/imageNews"
        android:src="@drawable/ic_news"
        android:contentDescription="@string/imgmenudescription"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"/>

    <ImageView
        android:layout_width="16sp"
        android:layout_height="16sp"
        android:id="@+id/news_like"
        android:src="@drawable/unlike"
        android:contentDescription="@string/imgmenudescription"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/imageNews"
        android:layout_alignLeft="@+id/imageNews"
        android:layout_alignStart="@+id/imageNews" />

    <TextView
        android:id="@+id/nb_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nb_likes"
        android:layout_alignBottom="@+id/news_like"
        android:layout_alignRight="@+id/imageNews"
        android:layout_alignEnd="@+id/imageNews" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_below="@+id/date"
        android:layout_toRightOf="@+id/imageNews"
        android:layout_toEndOf="@+id/imageNews"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp">
    </TextView>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_format"
        android:textSize="15sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>