<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.soonzik.soonzik.NewsFragment">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/liked_news"
        android:src="@drawable/unlike"
        android:layout_alignBottom="@+id/news_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/news_title"
        android:text="@string/news_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/liked_news"
        android:layout_toEndOf="@+id/liked_news" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/news_content"
        android:text="@string/lorem_ipsum"
        android:layout_below="@+id/liked_news"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/comment_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_label"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/news_content"
        android:layout_centerHorizontal="true" />


</RelativeLayout>