<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_playlist"
        android:id="@+id/imageView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp" />

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlistTitle"
        android:textSize="50px"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_alignTop="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:layout_toEndOf="@+id/imageView4">
    </TextView>

    <ImageView
        android:src="@drawable/ic_explorer"
        android:contentDescription="@string/imgmenudescription"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:layout_below="@+id/label"
        android:layout_alignLeft="@+id/label"
        android:layout_alignStart="@+id/label"
        android:id="@+id/imageView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nbTitle"
        android:text="@string/nb_title"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_toRightOf="@+id/imageView5"
        android:layout_toEndOf="@+id/imageView5"
        android:layout_marginLeft="9dp"
        android:layout_marginStart="9dp" />

</RelativeLayout>